[skip ci]Add config for sources that alreayd have stations marked as interchanges. Extract common i/f between gtfs and rail data source config to support this. Add tests for rail interchanges to validate using original data interchange flags and not infereing any extra.